@@ -1,3 +1,8 @@
+2001-07-28  Yanko Kaneti  <yaneti@declera.com>
+
+	* gconf/gconftool.c (main): s/all-pairs/all-entries/ in the error
+	messages
+
 2001-07-24  Darin Adler  <darin@bentspoon.com>
 
 	* acinclude.m4: Set BUILD_INCLUDED_LIBINTL for compatibility
